# buy-box

./: .env.local.example  .env.prod.example  .env.qa.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 22a9b490188d_initial_schema.py
src/buybox/api/: app.py  auth.py  deps.py  lambda_handler.py  schemas.py
src/buybox/api/routes/: audit_log.py  config.py  rank.py
src/buybox/domain/: eligibility.py  explain.py  models.py  ranking.py
src/buybox/persistence/: db.py  models.py  repositories.py
tests/: conftest.py  test_local_stack.py
tests/api/: conftest.py  test_audit_log.py  test_config.py  test_rank.py
tests/domain/: conftest.py  test_eligibility.py  test_ranking.py
tests/persistence/: test_audit_log_repository.py  test_offer_repository.py  test_tenant_config_repository.py  test_tenant_repository.py
