[project]
name = "buybox"
version = "0.1.0"
description = "Buy Box Engine - multi-tenant offer ranking service"
authors = [
    {name = "Harshu",email = "glamerabyneera@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "boto3 (>=1.43.48,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "mangum (>=0.21.0,<0.22.0)"
]

[tool.poetry]
packages = [{include = "buybox", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.8"
mypy = "^1.13"
pre-commit = "^4.0"
uvicorn = "^0.51.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection pattern requires `Depends(...)` as an argument default.
"src/buybox/api/**.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["infra", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
